# FairMQ

./: CMakeLists.txt  README.md  main.cpp
cmake/: FairMQBundlePackageHelper.cmake  FairMQDependencies.cmake  FairMQSummary.cmake
docs/: Documentation.md
examples/: CMakeLists.txt
examples/dds/: README.md
examples/n-m/: CMakeLists.txt
examples/qc/: CMakeLists.txt
fairmq/: CMakeLists.txt  Device.cxx  Device.h  FairMQDevice.h  StateMachine.cxx  States.cxx  States.h  Transports.h
fairmq/ofi/: Context.cxx  Context.h  Message.cxx  Message.h  Poller.cxx  Socket.cxx  Socket.h  TransportFactory.cxx  TransportFactory.h
fairmq/plugins/DDS/: runDDSCommandUI.cxx
fairmq/plugins/PMIx/: PMIxPlugin.cxx  PMIxPlugin.h
fairmq/plugins/control/: Control.cxx
fairmq/sdk/: CMakeLists.txt  Error.cxx  Error.h  Topology.h  runFairMQ.cxx
fairmq/sdk/commands/: Commands.cxx  Commands.h  CommandsFormat.fbs
fairmq/shmem/: Manager.cxx  Manager.h  Socket.h
fairmq/tools/: Process.cxx
fairmq/zeromq/: ZMsg.h
test/: CMakeLists.txt
test/commands/: _commands.cxx
test/device/: TestReceiver.h  TestSender.h  _error_state.cxx  _exceptions.cxx  _signals.cxx  _transitions.cxx
test/helper/devices/: TestErrorState.h  TestExceptions.h  TestRep.h  TestReq.h  TestSignals.h
test/memory_resources/: _memory_resources.cxx
test/sdk/: _topology.cxx
test/state_machine/: _state_machine.cxx
test/transport/: _options.cxx
